[package]
name = "graw"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
reqwest = { version = "0.11.11", features = ["stream", "json"] }
tokio = { version = "1.21.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.24"
regex = "1.6"

[dependencies.clap]
version = "3.2.22"
default-features = false
features = ["std", "suggestions", "color"]
