[package]
name = "graw"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
reqwest = { version = "0.11.6", features = ["stream", "json"] }
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
regex = "1.5"

[dependencies.clap]
version = "3.0.0-beta.5"
default-features = false
features = ["std", "suggestions", "color", "yaml"]

